# mcp-getgather-ebird

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
ebird_mcp/: __init__.py  cli.py
